; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/dbghelp/extr_data.c_cleanup_msvc_dll.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/dbghelp/extr_data.c_cleanup_msvc_dll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"%s\\uffs.pdb\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"DeleteFileA failed(%d)\0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"%s\\uffs.dll\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"RemoveDirectoryA failed(%d)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cleanup_msvc_dll() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = load i32, i32* @MAX_PATH, align 4
  %6 = zext i32 %5 to i64
  %7 = call i8* @llvm.stacksave()
  store i8* %7, i8** %1, align 8
  %8 = alloca i8, i64 %6, align 16
  store i64 %6, i64* %2, align 8
  %9 = call i8* (...) @tmpdir()
  store i8* %9, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @sprintf(i8* %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = call i32 @DeleteFileA(i8* %8)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 (...) @GetLastError()
  %15 = call i32 @ok(i32 %13, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @sprintf(i8* %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8* %16)
  %18 = call i32 @DeleteFileA(i8* %8)
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 (...) @GetLastError()
  %21 = call i32 @ok(i32 %19, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @RemoveDirectoryA(i8* %22)
  store i32 %23, i32* %3, align 4
  %24 = load i32, i32* %3, align 4
  %25 = call i32 (...) @GetLastError()
  %26 = call i32 @ok(i32 %24, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0), i32 %25)
  %27 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %27)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i8* @tmpdir(...) #2

declare dso_local i32 @sprintf(i8*, i8*, i8*) #2

declare dso_local i32 @DeleteFileA(i8*) #2

declare dso_local i32 @ok(i32, i8*, i32) #2

declare dso_local i32 @GetLastError(...) #2

declare dso_local i32 @RemoveDirectoryA(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
